--- a/Challenge_5/student_management/composer.json
+++ b/Challenge_5/student_management/composer.json
@@ -9,12 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "bacon/bacon-qr-code": "^1.0.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
+        "pragmarx/google2fa-laravel": "^1.4.1",
+        "pragmarx/google2fa-qrcode": "^1.0.3",
         "twbs/bootstrap": "^4.5"
     },
     "require-dev": {
